# indusgpt

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cli.py  compose.yaml  docker-compose.yml  main.py  proxybot.py  pyproject.toml  requirements.txt  run.sh  start_docker.sh  start_local.sh
instructions/: faq.py  router.py
src/: agent.py  validator.py
src/ai/: __init__.py  agent.py  chat_manager.py  chat_state_manager.py  faq_agent.py  generate_response.py  handle_user_message.py  in_memory.py  info_extractor.py  question_list.py  router.py  simple_agent.py  validator.py
src/bot/: bot.py  question_validator.py
src/chat/: __init__.py  atomic_requests.py  chat_manager.py  chat_state.py  chat_state_manager.py  faq_agent.py  generate_reply.py  generate_response.py  in_memory.py  info_extractor.py  question_list.py  router.py  summarizer.py  user_answer_storage.py  validator.py
src/chat_manager/: __init__.py  chat_context.py  chat_manager.py  info_extractor.py
src/dialog_agent/: __init__.py  answer_generator.py  dialog_agent.py
src/dialog_flow_agent/: __init__.py  answer_generator.py  dialog_flow_agent.py
src/entry_points/: cli.py
src/faq_agent/: __init__.py  faq.md  faq_agent.py
src/persistence/: __init__.py  models.py  storages.py
src/processors/: __init__.py  airtable.py  excel.py  google_sheets.py  pdf.py  pdf_processor.py  utils.py
src/router/: router.py
src/tg_bot/: __init__.py  bot.py  chat.py  chat_helper.py  chat_settings.py  google_sheets_helper.py  tortoise_config.py
src/types/: qa.py  (+4 more)
(+39 files in other folders)
