[project]
name = "indusgpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "dotenv>=0.9.9",
    "openai>=1.77.0",
    "pyrogram>=2.0.106",
]

[dependency-groups]
dev = [
    "aiogram>=3.20.0.post0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.8",
]
