[project]
name = "indusgpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiosqlite>=0.21.0",
    "dotenv>=0.9.9",
    "openai>=1.77.0",
    "openai-agents>=0.0.15",
    "pyrogram>=2.0.106",
]

[dependency-groups]
dev = [
    "aiogram>=3.20.0.post0",
    "colorama>=0.4.6",
    "pre-commit>=4.2.0",
    "ruff>=0.11.8",
]
